[tool.poetry]
name = "vaccine-download"
version = "0.1.0"
description = ""
authors = ["sguthrie"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8.0"
bs4 = "^0.0.1"
requests = "^2.25.1"
openpyxl = "^3.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
